--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,40 @@
-<p>header works!</p>
+ <nav class="container-fluid bg-dark py-2 shadow-sm sticky-top">
+    <div class="row">
+
+            <div class="col-lg-4 col-12 ">
+                <a class="brand text-light" routerLink="/">Shopping.Com</a>
+            </div>
+            <div class="col-lg-4 col-12 ">
+              <input type="search" placeholder="search" class="p-2 rounded-2 w-100">
+          </div>
+          <div class="col-lg-4 col-12 mt-3 text-end">
+                <a routerLink="/" class="link text-light"><i class="bi bi-house"></i> Home</a>
+                <a routerLink="/cart" class="link text-light"><i class="bi bi-cart3"></i> Cart <span class="cartCount"></span></a>
+          </div>
+    </div>
+</nav> 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar w/ text</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        Navbar text with an inline element
+      </span>
+    </div>
+  </div>
+</nav>
+
