--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,146 @@
 <app-header></app-header>
-<p>home works!</p>
+<div class="container-fluid p-0">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            @for (item of bannerImg; track $index) {
+                <div class="carousel-item active">
+                    <img src="{{item.img}}" class="" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+            }
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</div>
+<!-- categoriesItems -->
+<div class="container my-5">
+    <div class="row categoriesBox">
+        <div class="col-lg-2 col-6 ">
+            <a href="#" class="categoriesContent">
+                <img src="../../../assets/img/isolated-t-shirt-1852113_640.png" alt="" width="100px" height="100px">
+                <h4>Fashion</h4>
+            </a>
+        </div>
+        <div class="col-lg-2 col-6 ">
+            <a href="#" class="categoriesContent">
+                <img src="../../../assets/img/isolated-t-shirt-1852114_640.png" alt="" width="100px" height="100px">
+                <h4>Fashion</h4>
+            </a>
+        </div>
+        <div class="col-lg-2 col-6 ">
+            <a href="#" class="categoriesContent">
+                <img src="../../../assets/img/isolated-t-shirt-1852115_640.png" alt="" width="100px" height="100px">
+                <h4>Fashion</h4>
+            </a>
+        </div>
+    </div>
+</div>
+<!-- categoriesItems -->
+<div class="container">
+    <div class="row bg-light g-3">
+        <div class="col-lg-3 col-12 bg-light">
+            <a href="" class="text-decoration-none text-center">
+                <div>
+                    <img src="../../../assets/img/isolated-t-shirt-1852115_640.png" alt="" width="200px" height="200px">
+                </div>
+                <p>Lorem, ipsum.</p>
+            </a>
+            
+        </div>
+        <div class="col-lg-3 col-12 bg-light">
+            <a href="" class="text-decoration-none text-center">
+                <div>
+                    <img src="../../../assets/img/isolated-t-shirt-1852115_640.png" alt="" width="200px" height="200px">
+                </div>
+                <p>Lorem, ipsum.</p>
+            </a>
+            
+        </div>
+        <div class="col-lg-3 col-12 bg-light">
+            <a href="" class="text-decoration-none text-center">
+                <div>
+                    <img src="../../../assets/img/isolated-t-shirt-1852115_640.png" alt="" width="200px" height="200px">
+                </div>
+                <p>Lorem, ipsum.</p>
+            </a>
+            
+        </div>
+        <div class="col-lg-3 col-12 bg-light">
+            <a href="" class="text-decoration-none text-center">
+                <div>
+                    <img src="../../../assets/img/isolated-t-shirt-1852115_640.png" alt="" width="200px" height="200px">
+                </div>
+                <p>Lorem, ipsum.</p>
+            </a>
+            
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid my-3">
+    <div class="row g-3">
+      <div class=" col-lg-3 col-12">
+        <div class="p-3 border bg-white ">
+            <a href="" class="text-decoration-none">
+                <div class="productContext">
+                    <img src="../../../assets/img/t-shirt-1278404_640.jpg" alt="" width="200px" height="200px">
+                    <h1>Lorem, ipsum dolor.</h1>
+                </div>
+            </a>
+        </div>
+      </div>
+      <div class=" col-lg-3 col-12">
+        <div class="p-3 border bg-white ">
+            <a href="" class="text-decoration-none">
+                <div class="productContext">
+                    <img src="../../../assets/img/t-shirt-1278404_640.jpg" alt="" width="200px" height="200px">
+                    <h1>Lorem, ipsum dolor.</h1>
+                </div>
+            </a>
+        </div>
+      </div>
+      <div class=" col-lg-3 col-12">
+        <div class="p-3 border bg-white ">
+            <a href="" class="text-decoration-none">
+                <div class="productContext">
+                    <img src="../../../assets/img/t-shirt-1278404_640.jpg" alt="" width="200px" height="200px">
+                    <h1>Lorem, ipsum dolor.</h1>
+                </div>
+            </a>
+        </div>
+      </div>
+      <div class=" col-lg-3 col-12">
+        <div class="p-3 border bg-white ">
+            <a href="" class="text-decoration-none">
+                <div class="productContext">
+                    <img src="../../../assets/img/t-shirt-1278404_640.jpg" alt="" width="200px" height="200px">
+                    <h1>Lorem, ipsum dolor.</h1>
+                </div>
+            </a>
+        </div>
+      </div>
+      
+    </div>
+</div>
+
+<div class="container-fluid my-3">
+    <div class="row row-cols-12">
+        <img src="../../../assets/img/banner/7dcc28ed89760319.webp" alt="">
+    </div>
+</div>
+
