--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -32,19 +32,19 @@
     <div class="row categoriesBox">
         <div class="col-lg-2 col-6 ">
             <a href="#" class="categoriesContent">
-                <img src="../../../assets/img/isolated-t-shirt-1852113_640.png" alt="" width="100px" height="100px">
+                <img src="assets/img/isolated-t-shirt-1852113_640.png" alt="ctp1" width="100px" height="100px">
                 <h4>Fashion</h4>
             </a>
         </div>
         <div class="col-lg-2 col-6 ">
             <a href="#" class="categoriesContent">
-                <img src="../../../assets/img/isolated-t-shirt-1852114_640.png" alt="" width="100px" height="100px">
+                <img src="assets/img/isolated-t-shirt-1852114_640.png" alt="ctp2" width="100px" height="100px">
                 <h4>Fashion</h4>
             </a>
         </div>
         <div class="col-lg-2 col-6 ">
             <a href="#" class="categoriesContent">
-                <img src="../../../assets/img/isolated-t-shirt-1852115_640.png" alt="" width="100px" height="100px">
+                <img src="assets/img/isolated-t-shirt-1852115_640.png" alt="ctp2" width="100px" height="100px">
                 <h4>Fashion</h4>
             </a>
         </div>
